# baikpacking-agent

./: .gitignore  Makefile  README.md  docker-compose.yml  explore.ipynb  pyproject.toml
data/: dotwatcher_bikes_raw.json  dotwatcher_bikes_raw.jsonl
data/eval/: candidates.diag.json  candidates.jsonl  event_context_cache.jsonl  labels.jsonl  qrels.jsonl  queries.jsonl  rerank_config.json  response_ground_truth.jsonl
data/snapshots/clean/: dotwatcher_bikes_cleaned_new_20260202_075541.json
data/snapshots/raw/: dotwatcher_bikes_raw_new_20260202_075541.json  dotwatcher_bikes_raw_new_20260202_075541.jsonl
src/baikpacking/: logging_config.py
src/baikpacking/agents/: models.py  recommender_agent.py  response_judge_agent.py
src/baikpacking/db/: data_loader.py  db_connection.py  schema.sql
src/baikpacking/embedding/: __init__.py  config.py  embed.py  qdrant_utils.py
src/baikpacking/eval/: build_qrels.py  create_candidates.py  datasets.py  metrics.py  reranker.py  retrievers.py  retrievers_qdrant.py  run_retrieval_eval.py
src/baikpacking/pipelines/: embed_index.py  scrape_dotwatcher.py
src/baikpacking/retrieval/: rank.py
src/baikpacking/scraper/: __init__.py  browser.py  clean_json.py  get_data.py
src/baikpacking/scripts/: debug_qdrant_payload.py  make_eval_queries.py  run_recommender.py  run_response_judge.py  run_retrieval_eval.py
src/baikpacking/tools/: __init__.py  _trace_utils.py  call_trace.py  event_context.py  events.py  pg_vector_search.py  (+3 more)
tests/: test_embed.py  test_embed_dataset.py  test_recommender.py  test_search.py  test_search_grouped.py
(+4 files in other folders)
