[project]
name = "baikpacking-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2,<2.0",
    "ddgs>=9.9.3",
    "ipywidgets>=8.1.8",
    "pandas>=2.3.3",
    "pip>=25.3",
    "playwright>=1.56.0,<2.0",
    "psycopg2-binary>=2.9.11,<3.0", # or psycopg>=3,<4 depending on your choice
    "pydantic>=2.12,<3.0",
    "pydantic-ai>=1.28.0",
    "pydantic-settings>=2.12,<3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1,<2.0",
    "requests>=2.32,<3.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
